--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Movies App using ReactJS and API" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="apple-touch-icon" href="./favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>MTMovie</title>
 
