--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,28 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Movies App using ReactJS and API" />
+  <meta name="description" content="Movies App" />
   <link rel="apple-touch-icon" href="./favicon.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>MTMovie</title>
 
   <!-- HTML Meta Tags -->
   <meta name="keywords" content="ReactJS, React Hooks, Movie App, API" />
-  <meta name="author" content="nvanha" />
+  <meta name="author" content="minhtrung" />
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="MTMovie" />
-  <meta itemprop="description" content="Movie App using ReactJS and API" />
+  <meta itemprop="description" content="Movie App" />
 
   <!-- Facebook Meta Tags -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="MTMovie" />
-  <meta property="og:description" content="Movie App using ReactJS and API" />
+  <meta property="og:description" content="Movie App" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="MTMovie" />
-  <meta name="twitter:description" content="Movie App using ReactJS and API" />
+  <meta name="twitter:description" content="Movie App" />
 </head>
 
 <body>
